-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.3
-
-
677e58d5d (tqtc/lts-6.8), 5505ba578 (tqtc/lts-6.5)
QFileDialog crashes when opened from a QDialog
To reproduce, run the attached example project.
Steps to reproduce:
- Click the "Open QDialog" button
- Click the "Open QFileDialog" button on the displayed QDialog. Observe the QFileDialog crashes when opened
For Gerrit Dashboard: QTBUG-136333 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
649983,2 | QWindowsDialogHelperBase: make sure to stop an old timer | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
650364,2 | QWindowsDialogHelperBase: make sure to stop an old timer | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |