QWindowsDialogHelperBase: make sure to stop an old timer

Under some conditions (like in the linked bugreport), the user may
try to show the dialog twice.
In such cases the second call to QObject::startTimer() will overwrite
the timer id. As a result, the first timer will never be stopped, and
we'll keep calling startDialogThread(), hitting the internal Q_ASSERT()
calls.

Qt 6.9 and later are not affected by this problem, because the
implementation uses QBasicTimer instead of low-level timer id
manipulation. QBasicTimer stops the previous timer in its start() call,
so apply a similar fix here - call stopTimer() before starting a new
one.

Fixes: QTBUG-136333
Change-Id: I7a0fe4048473948cc9d82f15818a4ca7a14db56f
Reviewed-by: Axel Spoerl <axel.spoerl@qt.io>
(cherry picked from commit 677e58d5d696772c3c9d86506d06087a56ccb96d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>